namespace Chirp.Core;
public record AuthorInfoDTO(string AuthorId, string Name, string Email);