namespace Chirp.Core;
public record CheepDTO(string Id, string Message, DateTime TimeStamp, string AuthorName, string AuthorId, string? AuthorImage);
