namespace Chirp.Core;
public record FollowDTO(string FollowerId, string FollowingId, DateTime Timestamp);