namespace Chirp.Core;
public record HashtagDTO(string Hashtag, string CheepID);