namespace Chirp.Core;
public record HashtagTextDTO(string HashtagText);