namespace Chirp.Core;
public record ReactionDTO(string CheepId, string AuthorId, DateTime TimeStamp);
